# csf_tz

./: .releaserc.json  README.md  pyproject.toml
.github/workflows/: ci.yml  linter.yml  release.yml  tag-and-promote-from-pr-label.yml
csf_tz/: __init__.py  bank_api.py  budget_check.py  custom_api.py  hooks.py  modules.txt  overrides.py  patches.txt
csf_tz/api/: selcom.py  utils.py
csf_tz/config/: accounts.py  csf_tz.py  desktop.py  docs.py  purchase_and_stock_management.py  sales_and_marketing.py  stock.py
csf_tz/csf_tz/: additional_salary.js  bom_addittional_costs.js  company.js  custom_field.js  customer.js  delivery_note.js  employee_contact_qr.js  fees.js  journal_entry.js  payment_entry.js  program_enrollment.js  program_enrollment_tool.js  property_setter.js  purchase_invoice.js  purchase_receipt.js  quotation.js  salary_slip.js  sales_invoice.js  sales_order.js  stock_entry.js  stock_reconciliation.js  student_applicant.js  supplier.js  travel_request.js  warehouse.js
csf_tz/csftz_hooks/: additional_salary.py  attendance.py  bank_charges_payment_entry.py  budget.py  customer.py  employee_advance_payment_and_expense.py  employee_checkin.py  employee_contact_qr.py  exchange_calculations.py  get_relation_json.py  get_successor_json.py  item_reposting.py  items_revaluation.py  landed_cost_voucher.py  leave_encashment.py  material_request.py  payment_entry.py  payroll.py  program_enrollment.py  stock.py  student_applicant.py
csf_tz/kcb/: payments.py  pgp.py
csf_tz/overrides/: additional_salary.py  leave_encashment.py  salary_slip.py
(+394 files in other folders)
