[project]
name = "csf_tz"
authors = [
    { name = "Aakvatech", email = "info@aakvatech.com"}
]
description = "Country Specific Functionality Tanzania"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "gnupg",
    "openai",
    "pandas",
    "paramiko",
    "PGPy",
    "PyPDF3",
    "PyPDF2",
    "pyotp",
    "qrcode",
    "xmltodict",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.ruff]
line-length = 110

[tool.ruff.format]
indent-style = "tab"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
